Revert "Issue #194: testing exit_on_success function"
This reverts commit dd04f99fba9f264ebf1b1194d0d74e175aab2983.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,9 +120,8 @@ pypi:
     - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
     # Ensure installer without options fails
     - set +e
-    - pwd; exit_on_success
+    - pip install -vvv --upgrade "$PyPI_INSTALLER"; exit_on_success
     - set -e
-    - ls -l; exit_on_success
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-hevc-bgra; exit_on_fail
