--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -245,8 +245,6 @@ pypi-epiphan-dvi2pcie-duo:
     - ls -alh ./*.webm
     - rm -f ./*.mp4 ./*.avi ./*.webm
     # NumPy support
-    # TODO: delete this line after issue #133
-    - export BOOST_ROOT="$BOOST_163_ROOT_DIR"
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
@@ -259,8 +257,6 @@ pypi-epiphan-dvi2pcie-duo:
     # Run the actual NumPy tests
     - pip install numpy
     - test-giftgrab-numpy-i420; exit_on_fail
-    # TODO: delete this line after issue #133
-    - unset BOOST_ROOT
     - unset USE_EPIPHANSDK  # remove dummy var
     - deactivate
   tags:
@@ -309,8 +305,7 @@ epiphan-dvi2pcie-duo:
     - check_epiphan_alive
     - ctest; exit_on_fail
     # NumPy support
-    # TODO: remove BOOST_ROOT parameter after issue #133
-    - cmake -D BOOST_ROOT="$BOOST_163_ROOT_DIR" -D USE_NUMPY=ON .
+    - cmake -D USE_NUMPY=ON .
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - unset USE_EPIPHANSDK  # remove dummy var
