--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -265,6 +265,7 @@ pypi-epiphan-dvi2pcie-duo:
     - gift-epiphan-dvi2pcie-duo
   only:
     - this-branch-should-never-exist
+    - 33-ubuntu-16-04-lts
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 epiphan-dvi2pcie-duo:
@@ -314,6 +315,7 @@ epiphan-dvi2pcie-duo:
     - gift-epiphan-dvi2pcie-duo
   only:
     - this-branch-should-never-exist
+    - 33-ubuntu-16-04-lts
 
 ################## Device: Epiphan Pearl #########################
 ################## Platform: PyPI ################################
