--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -264,6 +264,7 @@ pypi-epiphan-dvi2pcie-duo:
 epiphan-dvi2pcie-duo:
   stage: test_cmake
   script:
+    - $EpiphanSDK_DIR/epiphan/samples/v2u/build/release/v2u -s
     # prepare environment
     - export GiftGrab_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab-epiphan-dvi2pcie-duo"
     - export INSTALL_DIR="$SCRATCH_DIR/install-epiphan-dvi2pcie-duo"
