--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,7 @@ linux:
     - 177-howto-links-for-dependencies-broken-on-github-mirror
     - 179-pypi-installer-name-broken
     - 41-configure-python-documentation-properly
+    - 33-ubuntu-16-04-lts
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -168,6 +169,7 @@ pypi:
     - 177-howto-links-for-dependencies-broken-on-github-mirror
     - 179-pypi-installer-name-broken
     - 41-configure-python-documentation-properly
+    - 33-ubuntu-16-04-lts
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
