Issue #33: in CI script: documented the three previously forgotten VP9 tests excluded from CI builds due to issue #189

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -150,6 +150,9 @@ pypi:
     - test-giftgrab-hevc-bgra; exit_on_fail
     - test-giftgrab-hevc-i420; exit_on_fail
     - test-giftgrab-xvid-bgra; exit_on_fail
+    # not executing VP9 tests due to issue #189
+    # - test-giftgrab-vp9-bgra; exit_on_fail
+    # - test-giftgrab-vp9-i420; exit_on_fail
     # Run the actual NumPy tests
     - pip install numpy
     - test-giftgrab-numpy-bgra; exit_on_fail
