Issue #195: excluded current branch from all CI builds as only documentation will be modified

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ linux:
     - 177-howto-links-for-dependencies-broken-on-github-mirror
     - 179-pypi-installer-name-broken
     - 41-configure-python-documentation-properly
+    - 195-fix-github-link-to-known-issues-from-requirements-md
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -181,6 +182,7 @@ pypi:
     - 177-howto-links-for-dependencies-broken-on-github-mirror
     - 179-pypi-installer-name-broken
     - 41-configure-python-documentation-properly
+    - 195-fix-github-link-to-known-issues-from-requirements-md
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
