Issue #202: excluding current branch from CI builds: involves only doc changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,6 +97,7 @@ linux:
     - 41-configure-python-documentation-properly
     - 195-fix-github-link-to-known-issues-from-requirements-md
     - 201-incorporate-debian-installation-caveats-into-documentation
+    - 202-add-installation-instructions-for-a-minimal-version
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -185,6 +186,7 @@ pypi:
     - 41-configure-python-documentation-properly
     - 195-fix-github-link-to-known-issues-from-requirements-md
     - 201-incorporate-debian-installation-caveats-into-documentation
+    - 202-add-installation-instructions-for-a-minimal-version
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
