--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,7 @@ linux:
     - 202-add-installation-instructions-for-a-minimal-version
     - 206-revise-readme-for-information-content-and-cosmetics
     - 203-make-dependency-versions-more-visible-in-documentation
+    - 207-check-all-changed-cross-references-in-docs-before-release
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -191,6 +192,7 @@ pypi:
     - 202-add-installation-instructions-for-a-minimal-version
     - 206-revise-readme-for-information-content-and-cosmetics
     - 203-make-dependency-versions-more-visible-in-documentation
+    - 207-check-all-changed-cross-references-in-docs-before-release
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
