Issue #224: excluded current branch from general Linux build (not PyPI)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,6 +104,7 @@ linux:
     - 212-revise-minimal-example-header-hierarchy
     - 220-add-non-standard-boost-installation-path-to-minimal-example
     - 222-add-how-to-cite-block-in-main-readme
+    - 224-add-a-citing-gift-grab-section-to-pypi-page
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
