Issue #223: excluded current branch from CI builds: only docs will be modified

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,6 +106,7 @@ linux:
     - 222-add-how-to-cite-block-in-main-readme
     - 224-add-a-citing-gift-grab-section-to-pypi-page
     - 225-add-citing-gift-grab-section-to-rtd-index
+    - 223-add-some-information-on-the-main-doxygen-home-page
 
 ################## Platform: PyPI ##################
 ################## Target: All #####################
@@ -204,6 +205,7 @@ pypi:
     - 220-add-non-standard-boost-installation-path-to-minimal-example
     - 222-add-how-to-cite-block-in-main-readme
     - 225-add-citing-gift-grab-section-to-rtd-index
+    - 223-add-some-information-on-the-main-doxygen-home-page
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 ################## Platform: PyPI ################################
