--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -670,7 +670,8 @@ WARN_LOGFILE           =
 # with spaces.
 
 INPUT                  = @doxy_main_page@ \
-                         @PROJECT_SOURCE_DIR@/api
+                         @PROJECT_SOURCE_DIR@/api \
+                         @PROJECT_SOURCE_DIR@/README.md
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
