Issue #3: copying test_network_targets.py to CMake build dir for running tests therein

--- a/src/tests/network-targets/CMakeLists.txt
+++ b/src/tests/network-targets/CMakeLists.txt
@@ -1,3 +1,7 @@
+FILE(COPY test_network_targets.py
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
+)
+
 SET(NAME_TEST Test_NetworkTargets)
 ADD_TEST(NAME ${NAME_TEST} COMMAND py.test test_network_targets.py)
 LIST(APPEND TESTS_LIST ${NAME_TEST})
