Issue #5: activated Blackmagic CI tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -444,6 +444,7 @@ pypi-blackmagic-decklink-sdi-4k:
     - 23-support-for-blackmagic-decklink-4k-extreme-12g
     - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
     - 14-unable-to-free-blackmagic-video-source
+    - 5-support-for-3d-capture-on-blackmagic-cards
 
 blackmagic-decklink-sdi-4k:
   stage: test_cmake
@@ -531,3 +532,4 @@ blackmagic-decklink-4k-extreme-12g:
     - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
     - 32-videosourcefactory-destructor-does-not-free-all-devices
     - 14-unable-to-free-blackmagic-video-source
+    - 5-support-for-3d-capture-on-blackmagic-cards
