--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -297,6 +297,7 @@ pypi-epiphan-dvi2pcie-duo:
     - gift-epiphan-dvi2pcie-duo
   only:
     - this-branch-should-never-exist
+    - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
 
 ################## Device: Epiphan DVI2PCIe Duo ##################
 epiphan-dvi2pcie-duo:
@@ -483,3 +484,4 @@ blackmagic-decklink-sdi-4k:
     - gift-blackmagic-decklink-sdi-4k
   only:
     - this-branch-should-never-exist
+    - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
