Issue #20: VideoSourceFactory tests now support BGRA as well

--- a/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
+++ b/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
@@ -20,7 +20,7 @@ LIST(APPEND COLOUR_SPACES BGRA)
 
 foreach(COLOUR_SPACE ${COLOUR_SPACES})
     SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST})
+    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${COLOUR_SPACE})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 
     # Blackmagic DeckLink SDI 4K on its own
