Issue #20: fixed Blackmagic-specific population of tested colour spaces

--- a/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
+++ b/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
@@ -15,10 +15,10 @@ TARGET_LINK_LIBRARIES(
     ${VIDEO_SOURCE_FACTORY_TEST}
     ${LIBS} ${NAME}
 )
-LIST(APPEND COLOUR_SPACES UYVY)
-LIST(APPEND COLOUR_SPACES BGRA)
+LIST(APPEND BM_COLOUR_SPACES UYVY)
+LIST(APPEND BM_COLOUR_SPACES BGRA)
 
-foreach(COLOUR_SPACE ${COLOUR_SPACES})
+foreach(COLOUR_SPACE ${BM_COLOUR_SPACES})
     SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
     ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${COLOUR_SPACE})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
