Issue #20: selectively populating tested colour spaces based on user options

--- a/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
+++ b/src/tests/blackmagic/decklinksdi4k/CMakeLists.txt
@@ -15,10 +15,14 @@ TARGET_LINK_LIBRARIES(
     ${VIDEO_SOURCE_FACTORY_TEST}
     ${LIBS} ${NAME}
 )
-LIST(APPEND BM_COLOUR_SPACES UYVY)
-LIST(APPEND BM_COLOUR_SPACES BGRA)
+if(USE_UYVY)
+    LIST(APPEND BLACKMAGIC_COLOUR_SPACES UYVY)
+endif(USE_UYVY)
+if(USE_BGRA)
+    LIST(APPEND BLACKMAGIC_COLOUR_SPACES BGRA)
+endif(USE_BGRA)
 
-foreach(COLOUR_SPACE ${BM_COLOUR_SPACES})
+foreach(COLOUR_SPACE ${BLACKMAGIC_COLOUR_SPACES})
     SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
     ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${COLOUR_SPACE})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
