Issue #23: added a test_pypi-stage CI script for new device

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -487,6 +487,42 @@ blackmagic-decklink-sdi-4k:
     - this-branch-should-never-exist
 
 ################## Device: Blackmagic DeckLink 4K Extreme 12G ##################
+pypi-blackmagic-decklink-4k-extreme-12g:
+  stage: test_pypi
+  script:
+    # prepare environment
+    - export BlackmagicSDK_DIR="/opt/blackmagic_sdk/10.11.1"
+    - GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/pypi-blackmagic-decklink-4k-extreme-12g"
+    - GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/install"
+    - GiftGrab_venv=venv
+    - rm -rf "$GiftGrab_PyPI_BUILD_DIR"
+    - mkdir "$GiftGrab_PyPI_BUILD_DIR"
+    - rm -rf "$GiftGrab_PyPI_INSTALL_DIR"
+    - mkdir "$GiftGrab_PyPI_INSTALL_DIR"
+    - cd "$GiftGrab_PyPI_BUILD_DIR"
+    - export GiftGrab_PyPI_DIST_DIR=dist
+    - rm -rfv "$GiftGrab_PyPI_DIST_DIR"
+    - cd "$GiftGrab_SOURCE_DIR"
+    - python setup.py sdist
+    - mv "$GiftGrab_PyPI_DIST_DIR" "$GiftGrab_PyPI_BUILD_DIR"
+    - cd "$GiftGrab_PyPI_BUILD_DIR"
+    - virtualenv $GiftGrab_venv
+    - cd $GiftGrab_venv
+    - source bin/activate
+    - ls -alh ./*
+    - PyPI_INSTALLER="../$GiftGrab_PyPI_DIST_DIR/$(ls ../$GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
+    - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
+    # because pip seems to be getting confused about install options sometimes:
+    - pip install PyYAML
+    - pip install pytest
+    - pip install -vvv --install-option="--blackmagic-decklink-4k-extreme-12g" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
+    # deactivate virtual env
+    - deactivate
+  tags:
+    - gift-blackmagic-decklink-4k-extreme-12g
+  only:
+    - this-branch-should-never-exist
+
 blackmagic-decklink-4k-extreme-12g:
   stage: test_cmake
   script:
