--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -139,20 +139,22 @@ pypi:
     - set +e
     - pip install -vvv --upgrade "$PyPI_INSTALLER"; exit_on_success
     - set -e
+    # Path to the convenience script for launching tests
+    - RUN_TESTS="./${GiftGrab_SOURCE_DIR}/tests/run-tests.sh"
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc-bgra; exit_on_fail
+    - $RUN_TESTS encode hevc bgra; exit_on_fail
     # HEVC support with x265
     - pip install -vvv --install-option="--hevc" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc-bgra; exit_on_fail
-    - test-giftgrab-hevc-i420; exit_on_fail
+    - $RUN_TESTS encode hevc bgra; exit_on_fail
+    - $RUN_TESTS encode hevc i420; exit_on_fail
     # hardware-accelerated HEVC
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-hevc-bgra; exit_on_fail
-    - test-giftgrab-hevc-i420; exit_on_fail
+    - $RUN_TESTS encode hevc bgra; exit_on_fail
+    - $RUN_TESTS encode hevc i420; exit_on_fail
     # Xvid support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-xvid-bgra; exit_on_fail
+    - $RUN_TESTS encode xvid bgra; exit_on_fail
     # VP9 support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
     # not executing VP9 tests due to issue #189
@@ -161,24 +163,24 @@ pypi:
     # NumPy support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
     # TODO: delete these five lines after issue #133
-    - test-giftgrab-hevc-bgra; exit_on_fail
-    - test-giftgrab-hevc-i420; exit_on_fail
-    - test-giftgrab-xvid-bgra; exit_on_fail
+    - $RUN_TESTS encode hevc bgra; exit_on_fail
+    - $RUN_TESTS encode hevc i420; exit_on_fail
+    - $RUN_TESTS encode xvid bgra; exit_on_fail
     # not executing VP9 tests due to issue #189
     # - test-giftgrab-vp9-bgra; exit_on_fail
     # - test-giftgrab-vp9-i420; exit_on_fail
     # Run the actual NumPy tests
     - pip install numpy
-    - test-giftgrab-numpy-bgra; exit_on_fail
-    - test-giftgrab-numpy-i420; exit_on_fail
+    - $RUN_TESTS numpy bgra; exit_on_fail
+    - $RUN_TESTS numpy i420; exit_on_fail
     # test support for video files
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --install-option="--files" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-file-hevc-bgra; exit_on_fail
-    - test-giftgrab-file-hevc-i420; exit_on_fail
-    - test-giftgrab-file-hevc-uyvy; exit_on_fail
-    - test-giftgrab-file-xvid-bgra; exit_on_fail
-    - test-giftgrab-file-xvid-i420; exit_on_fail
-    - test-giftgrab-file-xvid-uyvy; exit_on_fail
+    - $RUN_TESTS decode hevc bgra; exit_on_fail
+    - $RUN_TESTS decode hevc i420; exit_on_fail
+    - $RUN_TESTS decode hevc uyvy; exit_on_fail
+    - $RUN_TESTS decode xvid bgra; exit_on_fail
+    - $RUN_TESTS decode xvid i420; exit_on_fail
+    - $RUN_TESTS decode xvid uyvy; exit_on_fail
     # not executing VP9 tests due to issue #189
     # - test-giftgrab-file-vp9-bgra; exit_on_fail
     # - test-giftgrab-file-vp9-i420; exit_on_fail
