--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -158,8 +158,8 @@ pypi:
     # VP9 support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
     # not executing VP9 tests due to issue #189
-    # - test-giftgrab-vp9-bgra; exit_on_fail
-    # - test-giftgrab-vp9-i420; exit_on_fail
+    # - $RUN_TESTS encode vp9 bgra; exit_on_fail
+    # - $RUN_TESTS encode vp9 i420; exit_on_fail
     # NumPy support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
     # TODO: delete these five lines after issue #133
@@ -167,8 +167,8 @@ pypi:
     - $RUN_TESTS encode hevc i420; exit_on_fail
     - $RUN_TESTS encode xvid bgra; exit_on_fail
     # not executing VP9 tests due to issue #189
-    # - test-giftgrab-vp9-bgra; exit_on_fail
-    # - test-giftgrab-vp9-i420; exit_on_fail
+    # - $RUN_TESTS encode vp9 bgra; exit_on_fail
+    # - $RUN_TESTS encode vp9 i420; exit_on_fail
     # Run the actual NumPy tests
     - pip install numpy
     - $RUN_TESTS numpy bgra; exit_on_fail
@@ -182,9 +182,9 @@ pypi:
     - $RUN_TESTS decode xvid i420; exit_on_fail
     - $RUN_TESTS decode xvid uyvy; exit_on_fail
     # not executing VP9 tests due to issue #189
-    # - test-giftgrab-file-vp9-bgra; exit_on_fail
-    # - test-giftgrab-file-vp9-i420; exit_on_fail
-    # - test-giftgrab-file-vp9-uyvy; exit_on_fail
+    # - $RUN_TESTS decode vp9 bgra; exit_on_fail
+    # - $RUN_TESTS decode vp9 i420; exit_on_fail
+    # - $RUN_TESTS decode vp9 uyvy; exit_on_fail
     - deactivate
   tags:
     - gift-linux
