--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,7 +140,7 @@ pypi:
     - pip install -vvv --upgrade "$PyPI_INSTALLER"; exit_on_success
     - set -e
     # Path to the convenience script for launching tests
-    - RUN_TESTS="./${GiftGrab_SOURCE_DIR}/tests/run-tests.sh"
+    - RUN_TESTS="${GiftGrab_SOURCE_DIR}/tests/run-tests.sh"
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
     - $RUN_TESTS encode hevc bgra; exit_on_fail
