--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
   - mkdir -p $SCRATCH_DIR
   - export GiftGrab_SOURCE_DIR="$(pwd)/src"
   # Path to the convenience script for launching tests
-  - export RUN_TESTS="${GiftGrab_SOURCE_DIR}/tests/run-tests.sh"
+  - export TEST_LAUNCHER="${GiftGrab_SOURCE_DIR}/tests/run-tests.sh"
   - source "$CI_SCRIPTS_DIR/utils.sh"
   - export BOOST_163_ROOT_DIR="/home/gitlab-runner/environments/giftgrab/boost163"
 
@@ -143,48 +143,48 @@ pypi:
     - set -e
     # HEVC support
     - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
-    - $RUN_TESTS encode hevc bgra; exit_on_fail
+    - $TEST_LAUNCHER encode hevc bgra; exit_on_fail
     # HEVC support with x265
     - pip install -vvv --install-option="--hevc" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
-    - $RUN_TESTS encode hevc bgra; exit_on_fail
-    - $RUN_TESTS encode hevc i420; exit_on_fail
+    - $TEST_LAUNCHER encode hevc bgra; exit_on_fail
+    - $TEST_LAUNCHER encode hevc i420; exit_on_fail
     # hardware-accelerated HEVC
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
-    - $RUN_TESTS encode hevc bgra; exit_on_fail
-    - $RUN_TESTS encode hevc i420; exit_on_fail
+    - $TEST_LAUNCHER encode hevc bgra; exit_on_fail
+    - $TEST_LAUNCHER encode hevc i420; exit_on_fail
     # Xvid support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
-    - $RUN_TESTS encode xvid bgra; exit_on_fail
+    - $TEST_LAUNCHER encode xvid bgra; exit_on_fail
     # VP9 support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
     # not executing VP9 tests due to issue #189
-    # - $RUN_TESTS encode vp9 bgra; exit_on_fail
-    # - $RUN_TESTS encode vp9 i420; exit_on_fail
+    # - $TEST_LAUNCHER encode vp9 bgra; exit_on_fail
+    # - $TEST_LAUNCHER encode vp9 i420; exit_on_fail
     # NumPy support
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
     # TODO: delete these five lines after issue #133
-    - $RUN_TESTS encode hevc bgra; exit_on_fail
-    - $RUN_TESTS encode hevc i420; exit_on_fail
-    - $RUN_TESTS encode xvid bgra; exit_on_fail
+    - $TEST_LAUNCHER encode hevc bgra; exit_on_fail
+    - $TEST_LAUNCHER encode hevc i420; exit_on_fail
+    - $TEST_LAUNCHER encode xvid bgra; exit_on_fail
     # not executing VP9 tests due to issue #189
-    # - $RUN_TESTS encode vp9 bgra; exit_on_fail
-    # - $RUN_TESTS encode vp9 i420; exit_on_fail
+    # - $TEST_LAUNCHER encode vp9 bgra; exit_on_fail
+    # - $TEST_LAUNCHER encode vp9 i420; exit_on_fail
     # Run the actual NumPy tests
     - pip install numpy
-    - $RUN_TESTS numpy bgra; exit_on_fail
-    - $RUN_TESTS numpy i420; exit_on_fail
+    - $TEST_LAUNCHER numpy bgra; exit_on_fail
+    - $TEST_LAUNCHER numpy i420; exit_on_fail
     # test support for video files
     - pip install -vvv --install-option="--hevc" --install-option="--enable-nonfree" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--numpy" --install-option="--files" --upgrade "$PyPI_INSTALLER"
-    - $RUN_TESTS decode hevc bgra; exit_on_fail
-    - $RUN_TESTS decode hevc i420; exit_on_fail
-    - $RUN_TESTS decode hevc uyvy; exit_on_fail
-    - $RUN_TESTS decode xvid bgra; exit_on_fail
-    - $RUN_TESTS decode xvid i420; exit_on_fail
-    - $RUN_TESTS decode xvid uyvy; exit_on_fail
+    - $TEST_LAUNCHER decode hevc bgra; exit_on_fail
+    - $TEST_LAUNCHER decode hevc i420; exit_on_fail
+    - $TEST_LAUNCHER decode hevc uyvy; exit_on_fail
+    - $TEST_LAUNCHER decode xvid bgra; exit_on_fail
+    - $TEST_LAUNCHER decode xvid i420; exit_on_fail
+    - $TEST_LAUNCHER decode xvid uyvy; exit_on_fail
     # not executing VP9 tests due to issue #189
-    # - $RUN_TESTS decode vp9 bgra; exit_on_fail
-    # - $RUN_TESTS decode vp9 i420; exit_on_fail
-    # - $RUN_TESTS decode vp9 uyvy; exit_on_fail
+    # - $TEST_LAUNCHER decode vp9 bgra; exit_on_fail
+    # - $TEST_LAUNCHER decode vp9 i420; exit_on_fail
+    # - $TEST_LAUNCHER decode vp9 uyvy; exit_on_fail
     - deactivate
   tags:
     - gift-linux
