--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -459,7 +459,7 @@ pypi-blackmagic-decklink-sdi-4k:
     - pip install pytest
     - pip install -vvv --install-option="--blackmagic-decklink-sdi-4k" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
     # run tests
-    - test-giftgrab-blackmagic-decklinksdi4k-uyvy; exit_on_fail
+    - $TEST_LAUNCHER blackmagic-decklinksdi4k; exit_on_fail
     # deactivate virtual env
     - deactivate
   tags:
