--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -518,6 +518,8 @@ pypi-blackmagic-decklink-4k-extreme-12g:
     - pip install PyYAML
     - pip install pytest
     - pip install -vvv --install-option="--blackmagic-decklink-4k-extreme-12g" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
+    # run tests
+    - $TEST_LAUNCHER blackmagic-decklink4kextreme12g; exit_on_fail
     # deactivate virtual env
     - deactivate
   tags:
