--- a/src/tests/blackmagic/CMakeLists.txt
+++ b/src/tests/blackmagic/CMakeLists.txt
@@ -5,6 +5,13 @@ FILE(COPY
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+if(USE_BLACKMAGIC_DECKLINK_SDI_4K)
+    LIST(APPEND BLACKMAGIC_DEVICES DeckLinkSDI4K)
+endif(USE_BLACKMAGIC_DECKLINK_SDI_4K)
+if(USE_BLACKMAGIC_DECKLINK_4K_EXTREME_12G)
+    LIST(APPEND BLACKMAGIC_DEVICES DeckLink4KExtreme12G)
+endif(USE_BLACKMAGIC_DECKLINK_4K_EXTREME_12G)
+
 # VideoSourceFactory
 SET(VIDEO_SOURCE_FACTORY_TEST test_video_source_factory_blackmagic)
 ADD_EXECUTABLE(
@@ -17,24 +24,26 @@ TARGET_LINK_LIBRARIES(
 )
 SET(COLOUR_SPACE UYVY)
 
-SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_VideoSourceFactory_${COLOUR_SPACE})
-ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST})
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+foreach(BLACKMAGIC_DEVICE ${BLACKMAGIC_DEVICES})
+    SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_VideoSourceFactory_${COLOUR_SPACE})
+    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${BLACKMAGIC_DEVICE})
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
 
-# Blackmagic DeckLink SDI 4K on its own
-SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_${COLOUR_SPACE})
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=${COLOUR_SPACE} test_unit.py
-)
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+    # Blackmagic device on its own
+    SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_${COLOUR_SPACE})
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --device=${BLACKMAGIC_DEVICE} --colour-space=${COLOUR_SPACE} test_unit.py
+    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
 
-# Blackmagic DeckLink SDI 4K using the observer design pattern
-SET(NAME_TEST Test_Blackmagic_DeckLinkSDI4K_ObserverPattern_${COLOUR_SPACE})
-SET(FRAME_RATE 27)
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --colour-space=${COLOUR_SPACE} --frame-rate=${FRAME_RATE} --observers=3 test_observer.py
-)
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+    # Blackmagic device using the observer design pattern
+    SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_ObserverPattern_${COLOUR_SPACE})
+    SET(FRAME_RATE 27)
+    ADD_TEST(NAME ${NAME_TEST}
+        COMMAND py.test --device=${BLACKMAGIC_DEVICE} --colour-space=${COLOUR_SPACE} --frame-rate=${FRAME_RATE} --observers=3 test_observer.py
+    )
+    LIST(APPEND TESTS_LIST ${NAME_TEST})
+endforeach(BLACKMAGIC_DEVICE)
 
 # to avoid copying stuff around
 SET_TESTS_PROPERTIES(${TESTS_LIST}
