Issue #20: activated DeckLink 4K Extreme 12G CI script for current branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -527,6 +527,7 @@ pypi-blackmagic-decklink-4k-extreme-12g:
   only:
     - this-branch-should-never-exist
     - 23-support-for-blackmagic-decklink-4k-extreme-12g
+    - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
 
 blackmagic-decklink-4k-extreme-12g:
   stage: test_cmake
@@ -545,3 +546,4 @@ blackmagic-decklink-4k-extreme-12g:
   only:
     - this-branch-should-never-exist
     - 23-support-for-blackmagic-decklink-4k-extreme-12g
+    - 20-support-for-capturing-bgra-frames-with-blackmagic-devices
