Issue #20: added colour space specification to the test configuration in CMake file

--- a/src/tests/blackmagic/CMakeLists.txt
+++ b/src/tests/blackmagic/CMakeLists.txt
@@ -26,7 +26,7 @@ SET(COLOUR_SPACE UYVY)
 
 foreach(BLACKMAGIC_DEVICE ${BLACKMAGIC_DEVICES})
     SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_VideoSourceFactory_${COLOUR_SPACE})
-    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${BLACKMAGIC_DEVICE})
+    ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${BLACKMAGIC_DEVICE} ${COLOUR_SPACE})
     LIST(APPEND TESTS_LIST ${NAME_TEST})
 
     # Blackmagic device on its own
