Issue #20: excluding unsupported colour spaces from testing based on device selection

--- a/src/tests/blackmagic/CMakeLists.txt
+++ b/src/tests/blackmagic/CMakeLists.txt
@@ -25,6 +25,13 @@ TARGET_LINK_LIBRARIES(
 
 foreach(BLACKMAGIC_DEVICE ${BLACKMAGIC_DEVICES})
     foreach(COLOUR_SPACE ${COLOUR_SPACES})
+        if(COLOUR_SPACE STREQUAL I420)
+            continue()
+        endif(COLOUR_SPACE STREQUAL I420)
+        if(COLOUR_SPACE STREQUAL BGRA AND BLACKMAGIC_DEVICE STREQUAL DeckLinkSDI4K)
+            continue()
+        endif(COLOUR_SPACE STREQUAL BGRA AND BLACKMAGIC_DEVICE STREQUAL DeckLinkSDI4K)
+
         SET(NAME_TEST Test_Blackmagic_${BLACKMAGIC_DEVICE}_VideoSourceFactory_${COLOUR_SPACE})
         ADD_TEST(NAME ${NAME_TEST} COMMAND ${VIDEO_SOURCE_FACTORY_TEST} ${BLACKMAGIC_DEVICE} ${COLOUR_SPACE})
         LIST(APPEND TESTS_LIST ${NAME_TEST})
