--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -459,7 +459,7 @@ pypi-blackmagic-decklink-sdi-4k:
     - pip install pytest
     - pip install -vvv --install-option="--blackmagic-decklink-sdi-4k" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
     # run tests
-    - $TEST_LAUNCHER blackmagic-decklinksdi4k; exit_on_fail
+    - $TEST_LAUNCHER blackmagic-decklinksdi4k uyvy; exit_on_fail
     # deactivate virtual env
     - deactivate
   tags:
@@ -521,7 +521,8 @@ pypi-blackmagic-decklink-4k-extreme-12g:
     - pip install pytest
     - pip install -vvv --install-option="--blackmagic-decklink-4k-extreme-12g" --install-option="--enable-nonfree" --upgrade "$PyPI_INSTALLER"
     # run tests
-    - $TEST_LAUNCHER blackmagic-decklink4kextreme12g; exit_on_fail
+    - $TEST_LAUNCHER blackmagic-decklink4kextreme12g uyvy; exit_on_fail
+    - $TEST_LAUNCHER blackmagic-decklink4kextreme12g bgra; exit_on_fail
     # deactivate virtual env
     - deactivate
   tags:
