--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -245,7 +245,8 @@ pypi-epiphan-dvi2pcie-duo:
     # Epiphan DVI2PCIe Duo support (OpenCV only)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--no-i420" --upgrade "$PyPI_INSTALLER"
     # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
-    # - test-giftgrab-epiphan-dvi2pcieduo-bgra; exit_on_fail
+    # - $TEST_LAUNCHER epiphan-dvi2pcie bgra sdi; exit_on_fail
+    # - $TEST_LAUNCHER epiphan-dvi2pcie bgra dvi; exit_on_fail
     # - edd-dvi-bgra-hevc; exit_on_fail
     # - edd-sdi-bgra-hevc; exit_on_fail
     # - edd-dvi-bgra-xvid; exit_on_fail
@@ -255,7 +256,8 @@ pypi-epiphan-dvi2pcie-duo:
     # Epiphan DVI2PCIe Duo support (Epiphan SDK only)
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --install-option="--no-bgra" --upgrade "$PyPI_INSTALLER"
     # TODO: issue #102
-    # - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
+    # - $TEST_LAUNCHER epiphan-dvi2pcie i420 sdi; exit_on_fail
+    # - $TEST_LAUNCHER epiphan-dvi2pcie i420 dvi; exit_on_fail
     # Disabled the BGRA tests of Epiphan DVI2PCIe Duo (currently using OpenCV) until issue #115 is resolved
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
@@ -270,7 +272,8 @@ pypi-epiphan-dvi2pcie-duo:
     # see definition of width_offset in test_epiphan_py_module.py (Epiphan DVI2PCIe Duo tests)
     - export USE_EPIPHANSDK=3
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
+    - $TEST_LAUNCHER epiphan-dvi2pcie i420 sdi; exit_on_fail
+    - $TEST_LAUNCHER epiphan-dvi2pcie i420 dvi; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
     - edd-dvi-i420-vp9; exit_on_fail
@@ -280,7 +283,8 @@ pypi-epiphan-dvi2pcie-duo:
     - rm -f ./*.mp4 ./*.avi ./*.webm
     # NumPy support
     - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--enable-nonfree" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--epiphansdk" --install-option="--numpy" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
+    - $TEST_LAUNCHER epiphan-dvi2pcie i420 sdi; exit_on_fail
+    - $TEST_LAUNCHER epiphan-dvi2pcie i420 dvi; exit_on_fail
     - edd-dvi-i420-hevc; exit_on_fail
     - edd-sdi-i420-hevc; exit_on_fail
     - edd-dvi-i420-vp9; exit_on_fail
